--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-Under Construction
+---
+layout: default
+title: Resume
+permalink: /
+---
+
+<div class="resume">
+    <!-- Introduction -->
+    <div class="row">
+        <div class="col-sm-3 text-center">
+            <img src="images/profile.jpeg" class="img-circle resume-avatar"/>
+        </div>
+        <div class="col-sm-9">
+            <h2>{{ site.data.information.introduction.name }}</h2>
+            <p>{{ site.data.information.introduction.description }}</p>
+            {% for link in site.data.information.introduction.links %}
+              <a href="{{ link.url }}" target="_blank">
+                <span class="text-muted">{{link.text}}</span>
+              </a>
+              {% unless forloop.last %}
+                <span> | </span>
+              {% endunless %}
+            {% endfor %}
+        </div>
+    </div>
+    <!-- End Introduction -->
+    <!-- Sections -->
+    {% for section in site.data.information.sections %}
+      <div class="row header">
+          <h2 class="header-name">{{section.name}}</h2>
+          <hr class="header-bar"/>
+      </div>
+      {% for experience in section.experiences %}
+      <div class="row item">
+          <div class="col-lg-10 col-lg-offset-1">
+              <div class="row">
+                  <div class="col-xs-7">
+                      <a href="{{ experience.url }}" target="_blank">
+                          <h3 class="text-uppercase">{{ experience.name }}</h3>
+                      </a>
+                  </div>
+                  <div class="col-xs-5 text-right">
+                      <a href="https://www.google.com/maps/place/{{ experience.location }}" target="_blank">
+                          <h3 class="text-uppercase">{{ experience.location }}</h3>
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-10 col-lg-offset-1">
+              <p class="subtext">{{ experience.subText }}</p>
+              <p class="item-description">{{ experience.description }}</p>
+              <ul>
+                  {% for involvement in experience.involvement %}
+                  <li>{{ involvement.description }}</li>
+                  {% endfor %}
+              </ul>
+              {% if experience.technologies %}
+                <p>Technologies Used:
+                  {% for technology in experience.technologies %}
+                    <span>{{ technology }} </span>
+                  {% endfor %}
+                </p>
+              {% endif %}
+          </div>
+      </div>
+      {% endfor %}
+    {% endfor %}
+    <!-- End Sections -->
+</div>
